tests/custom/STARIS_2022/operation-type-errors/freq-type-error/stderr.expected
Error:
    Parser error in file: freq-type-error.essence Error is:
ValidatorError freq-type-error.essence:2:21:
  |
2 | such that b = (freq(1, false) = 0)
  |                     ^
Type error:
	Expected: matrix indexed by [int] of bool
	Got: int

